k8s/booking.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-deployment
  labels:
    app: booking
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking
  template:
    metadata:
      labels:
        app: booking
    spec:
      containers:
        - name: booking
          image: anandu12345/hospital-booking-service:latest
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  selector:
    app: booking
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
  type: ClusterIP
