k8s/chat.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-deployment
  labels:
    app: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat
  template:
    metadata:
      labels:
        app: chat
    spec:
      containers:
        - name: chat
          image: anandu12345/hospital-chat-service:latest
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
  type: ClusterIP
