k8s/doctor.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doctor-deployment
  labels:
    app: doctor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doctor
  template:
    metadata:
      labels:
        app: doctor
    spec:
      containers:
        - name: doctor
          image: anandu12345/hospital-doctor-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: doctor-service
spec:
  selector:
    app: doctor
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
  type: ClusterIP
